--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng s –o --port 4200",
     "build": "ng build",
+    "build:dev": "ng build --output-path ./docs --watch --base-href=/my-app --deploy-url=/static/",
+    "build:pro": "ng build --output-path ./docs --prod --base-href=/my-app --deploy-url=/static/",
+    "build:pro2": "ng build --output-path ../src/main/resources/angular --prod --base-href=/my-app --deploy-url=/static/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -12,10 +15,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.4",
+    "@angular/cdk": "^11.2.11",
     "@angular/common": "~11.2.4",
     "@angular/compiler": "~11.2.4",
     "@angular/core": "~11.2.4",
     "@angular/forms": "~11.2.4",
+    "@angular/material": "^11.2.11",
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
